--- a/front/public/index.html
+++ b/front/public/index.html
@@ -80,6 +80,8 @@
     <script src="js/jquery.animateNumber.min.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+
     <!-- aos(==wow) : npm 설치 -->
     <!-- <script src="js/aos.js"></script> -->
     <script src="js/moment.min.js"></script>
