--- a/front/public/index.html
+++ b/front/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    
     <title>React App</title>
     <!-- 여기 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -34,12 +35,18 @@
     />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <!-- 부트스트랩 -->
+    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css" />
+
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
     <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="fonts/icomoon/style.css" />
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css" />
     <link rel="stylesheet" href="css/daterangepicker.css" />
+    <!-- 아코디언  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <!-- aos : npm 설치 -->
     <!-- <link rel="stylesheet" href="css/aos.css" /> -->
     <!-- 개발자 직접 만든 css 파일 -> src/assets/css 이동 -->
@@ -72,6 +79,8 @@
     <script src="js/daterangepicker.js"></script>
     <!-- typed.js : npm 설치 -->
     <!-- <script src="js/typed.js"></script> -->
+    <!-- 아코디언 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- 개발자 직접 코딩 js #1 : scripts.js => src/assets/js 이동 -->
     <!-- <script>
