oauth 리다이렉트 설정

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="google-site-verification" content="hhFz9E4jIIYyLGWd8tyoTeeNOXy-Awll9YYiSd2B5QQ" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
 
